After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733244 - Correct misspelled words
Correct misspelled words
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
1.3.91
Other All
: Normal minor
: 1.4.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-16 11:42 UTC by Hyunjun Ko
Modified: 2014-07-16 11:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Correct misspelled words in description in rtsp-media (1.29 KB, patch)
2014-07-16 11:44 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2014-07-16 11:42:15 UTC
There are some misspelled words in description in rtsp-media.h
I attached patch for this.
Comment 1 Hyunjun Ko 2014-07-16 11:44:23 UTC
Created attachment 280819 [details] [review]
Correct misspelled words in description in rtsp-media
Comment 2 Tim-Philipp Müller 2014-07-16 11:52:26 UTC
Thanks for the patch, pushed to master:

 commit a8e604355cc18445f1b9154abc9efb6d990c32bf
 Author: Hyunjun Ko <zzoonis@gmail.com>
 Date:   Wed Jul 16 20:39:42 2014 +0900

    media: correct misspelled words in description
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733244