media: correct misspelled words in description

https://bugzilla.gnome.org/show_bug.cgi?id=733244